Remove -Xcontext-parameters